// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mail templates (snapshots) > invitationTemplate matches snapshot 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>You're invited to join Acme Corp</title>
  <style>
    body { margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif; background-color: #f4f4f7; }
    .container { max-width: 570px; margin: 0 auto; padding: 40px 20px; }
    .card { background: #ffffff; border-radius: 8px; padding: 40px; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08); }
    .button { display: inline-block; padding: 12px 24px; background-color: #2563eb; color: #ffffff; text-decoration: none; border-radius: 6px; font-weight: 600; font-size: 14px; }
    .footer { text-align: center; padding: 20px; color: #9ca3af; font-size: 12px; }
    h1 { margin: 0 0 16px; font-size: 22px; color: #111827; }
    p { margin: 0 0 16px; color: #374151; font-size: 15px; line-height: 1.6; }
    .preheader { display: none !important; visibility: hidden; mso-hide: all; font-size: 1px; line-height: 1px; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; }
  </style>
</head>
<body>
  <span class="preheader">Jane Doe invited you to join Acme Corp.</span>
  <div class="container">
    <div class="card">
      
      <h1>You've been invited</h1>
      <p><strong>Jane Doe</strong> has invited you to join <strong>Acme Corp</strong>.</p>
      <p>Click the button below to accept the invitation. This link expires in 7 days.</p>
      <p style="text-align: center; margin: 32px 0;">
        <a href="https://app.example.com/invite/abc" class="button">Accept Invitation</a>
      </p>
      <p style="font-size: 13px; color: #6b7280;">If you weren't expecting this invitation, you can safely ignore this email.</p>
      <p style="font-size: 13px; color: #6b7280;">Or copy and paste this URL into your browser:</p>
      <p style="font-size: 12px; color: #9ca3af; word-break: break-all;">https://app.example.com/invite/abc</p>
    
    </div>
    <div class="footer">
      This is an automated message. Please do not reply.
    </div>
  </div>
</body>
</html>"
`;

exports[`mail templates (snapshots) > magicLinkTemplate matches snapshot 1`] = `
"<!DOCTYPE html>
<html lang="en">
<head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Sign in to your account</title>
  <style>
    body { margin: 0; padding: 0; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif; background-color: #f4f4f7; }
    .container { max-width: 570px; margin: 0 auto; padding: 40px 20px; }
    .card { background: #ffffff; border-radius: 8px; padding: 40px; box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08); }
    .button { display: inline-block; padding: 12px 24px; background-color: #2563eb; color: #ffffff; text-decoration: none; border-radius: 6px; font-weight: 600; font-size: 14px; }
    .footer { text-align: center; padding: 20px; color: #9ca3af; font-size: 12px; }
    h1 { margin: 0 0 16px; font-size: 22px; color: #111827; }
    p { margin: 0 0 16px; color: #374151; font-size: 15px; line-height: 1.6; }
    .preheader { display: none !important; visibility: hidden; mso-hide: all; font-size: 1px; line-height: 1px; max-height: 0; max-width: 0; opacity: 0; overflow: hidden; }
  </style>
</head>
<body>
  <span class="preheader">Click the link below to sign in — expires in 15 minutes.</span>
  <div class="container">
    <div class="card">
      
      <h1>Sign in to your account</h1>
      <p>Click the button below to securely sign in. This link expires in 15 minutes.</p>
      <p style="text-align: center; margin: 32px 0;">
        <a href="https://app.example.com/auth/magic?token=test" class="button">Sign In</a>
      </p>
      <p style="font-size: 13px; color: #6b7280;">If you didn't request this, you can safely ignore this email.</p>
      <p style="font-size: 13px; color: #6b7280;">Or copy and paste this URL into your browser:</p>
      <p style="font-size: 12px; color: #9ca3af; word-break: break-all;">https://app.example.com/auth/magic?token=test</p>
    
    </div>
    <div class="footer">
      This is an automated message. Please do not reply.
    </div>
  </div>
</body>
</html>"
`;
